--- a/Programming_Assignment_12.ipynb
+++ b/Programming_Assignment_12.ipynb
@@ -6,7 +6,7 @@
       "name": "Programming Assignment_12.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/NmtyfxVRO1aNAicBqYVm",
+      "authorship_tag": "ABX9TyMdJ7JCNWR9CT/NoNvP1G9w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,10 +247,11 @@
         "\n",
         "def dict():\n",
         "  x={}\n",
-        "  x = {1: 2, 3: 4, 4: 3, 2: 1, 0: 0}\n",
+        "  x= {1:'Alice' ,2:'John' ,4:'Peter' ,3:'Andrew' ,6:'Ruffalo' ,5:'Chris' }\n",
         "  print(\"key:  \",sorted(x.keys())) \n",
-        "  print(\"value:   \",sorted(x.values()))\n",
-        "   \n",
+        "  print(\"value:  \",sorted(x.values()))\n",
+        "  for i in sorted (x) :\n",
+        "    print ((i, x[i]), end =\" \")\n",
         "dict()"
       ],
       "metadata": {
@@ -258,16 +259,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hLMssMWhylhC",
-        "outputId": "30af6279-cecc-45c1-b88c-4f89350daab2"
+        "outputId": "1288ec5a-731a-448f-b8bb-d6d75227389b"
       },
-      "execution_count": 20,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "key:   [0, 1, 2, 3, 4]\n",
-            "value:    [0, 1, 2, 3, 4]\n"
+            "key:   [1, 2, 3, 4, 5, 6]\n",
+            "value:   ['Alice', 'Andrew', 'Chris', 'John', 'Peter', 'Ruffalo']\n",
+            "(1, 'Alice') (2, 'John') (3, 'Andrew') (4, 'Peter') (5, 'Chris') (6, 'Ruffalo') "
           ]
         }
       ]
